tests/next_variant/fail/missing_default.stderr
error[E0277]: the trait bound `T: Default` is not satisfied
 --> tests/next_variant/fail/missing_default.rs:3:10
  |
3 | #[derive(NextVariant)]
  |          ^^^^^^^^^^^ the trait `Default` is not implemented for `T`
  |
  = note: this error originates in the derive macro `NextVariant` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
  |
4 | enum Complex<T: std::default::Default> {
  |               +++++++++++++++++++++++
